--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "dotenv": "^8.2.0",
+    "jsonfile": "^6.0.1",
     "onoff": "^5.0.1",
     "slimbot": "^4.6.3"
   },
