--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "jsonfile": "^6.0.1",
+    "moment": "^2.24.0",
     "node-dht-sensor": "^0.4.1",
     "onoff": "^5.0.1",
     "slimbot": "^4.6.3"
